# launch-workflows

./: .gitignore  .tool-versions  README.md  pyproject.toml
.github/configs/: release-drafter-branch-name.yml  release-drafter-conventional-commits.yml
.github/workflows/: lint.yml  release-draft.yml  reusable-github-matrix-tg.yml  reusable-pr-conventional-commit-title.yml  reusable-pr-label-by-branch.yml  reusable-python-uv-pytest.yml  reusable-release-draft-on-merge.yml  reusable-release-on-merge.yml  reusable-terraform-check-aws.yml  reusable-terraform-check-azure.yml  reusable-terragrunt-deploy-aws.yml  reusable-terragrunt-deploy-azure.yml  reusable-terragrunt-deploy-env.yml  reusable-terragrunt-deploy-ephemeral-aws.yml  reusable-terragrunt-deploy-ephemeral-azure.yml  (+10 more)
docs/: reusable-github-matrix-tg.md  reusable-pr-conventional-commit-title.md  reusable-pr-label-by-branch.md  reusable-python-uv-pytest.md  reusable-release-draft-on-merge.md  reusable-release-on-merge.md  reusable-terraform-check-aws.md  reusable-terraform-check-azure.md  reusable-terragrunt-deploy-azure.md  reusable-terragrunt-deploy-ephemeral-aws.md  reusable-terragrunt-deploy-ephemeral-azure.md  reusable-terragrunt-deploy-ephemeral.md  reusable-terragrunt-deploy.md  reusable-terragrunt-destroy-ephemeral-aws.md  reusable-terragrunt-destroy-ephemeral-azure.md  reusable-terragrunt-destroy-ephemeral.md  reusable-terragrunt-plan-only-aws.md  reusable-terragrunt-plan-only-azure.md  reusable-terragrunt-plan-only.md
scripts/: create_missing_releases.py  sync_workflows.py
src/: launch_github.py
(+19 files in other folders)
